--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -153,7 +153,7 @@ jobs:
             gh pr list \
               --base main \
               --state merged \
-              --search "merged:${SINCE_DATE}..${DUE_DATE} -label:question -label:duplicate -label:invalid -label:wontfix"
+              --search "merged:${SINCE_DATE}..${DUE_DATE} -label:question -label:duplicate -label:invalid -label:wontfix" \
               --limit 500 \
               --json number,title,author \
               --template '{{range .}}* {{.title}} (#{{.number}}) @{{.author.login}}{{"\n"}}{{end}}' >> release-notes.md
