--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -32,11 +32,6 @@ jobs:
         with:
           go-version-file: "go.work"
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "2.7"
-
       - name: Generate monthly tag
         id: tag
         run: |
@@ -82,12 +77,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          CHANGELOG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           TAG="${{ steps.tag.outputs.tag }}"
-
-          # Install github-changelog-generator
-          # gem install github_changelog_generator --no-document
 
           # Extract year and month for the header
           YEAR_MONTH=$(echo "$TAG" | sed 's/monthly-//')
@@ -155,35 +146,11 @@ jobs:
             gh pr list \
               --base main \
               --state merged \
-              --search "merged:${SINCE_DATE}..${DUE_DATE} -label:question -label:duplicate -label:invalid -label:wontfix" \
+              --search "merged:${SINCE_DATE}..${DUE_DATE}" \
               --limit 500 \
               --json number,title,author \
               --template '{{range .}}* {{.title}} (#{{.number}}) @{{.author.login}}{{"\n"}}{{end}}' >> release-notes.md
 
-
-            # # Use the upstream repository (kubernetes-sigs/gateway-api) not the fork
-            # REPO_USER="kubernetes-sigs"
-            # REPO_PROJECT="gateway-api"
-            
-            # # Generate changelog between previous tag and current tag
-            # # Use token from environment variable
-            # export CHANGELOG_GITHUB_TOKEN="${GITHUB_TOKEN}"
-            # # This environment variable is the key to stopping the FrozenError in Ruby 3.x
-            # export RUBYOPT="--disable-frozen-string-literal"
-
-            # github_changelog_generator \
-            #   --user "${REPO_USER}" \
-            #   --project "${REPO_PROJECT}" \
-            #   --since-tag "${PREV_TAG}" \
-            #   --due-tag "${TAG}" \
-            #   --output /tmp/changelog.md \
-            #   --no-unreleased \
-            #   --no-issues \
-            #   --pull-requests \
-            #   --header-label "## Merged Pull Requests between ${PREV_TAG} and ${TAG}" \
-            #   --exclude-labels question,duplicate,invalid,wontfix
-            
-            # cat /tmp/changelog.md >> release-notes.md
           else
             printf '### Merged Pull Requests\n\n'
             printf 'No pull requests found in this release.\n' >> release-notes.md
