TLSRoute: Update Hostname validation to ensure backward compatibility

--- a/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
@@ -89,13 +89,13 @@ spec:
                 - message: Hostnames cannot contain an IP
                   rule: self.all(h, !isIP(h))
                 - message: Hostnames must be valid based on RFC-1123
-                  rule: 'self.all(h, !h.contains(''*'') ? !format.dns1123Subdomain().validate(h).hasValue()
-                    : true )'
+                  rule: 'self.all(h, !h.contains(''*'') ? h.matches(''^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)$'')
+                    : true)'
                 - message: Wildcards on hostnames must be the first label, and the
                     rest of hostname must be valid based on RFC-1123
                   rule: 'self.all(h, h.contains(''*'') ? (h.startsWith(''*.'') &&
-                    !format.dns1123Subdomain().validate(h.substring(2)).hasValue())
-                    : true )'
+                    h.substring(2).matches(''^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)$''))
+                    : true)'
               parentRefs:
                 description: |-
                   ParentRefs references the resources (usually Gateways) that a Route wants
@@ -1655,13 +1655,13 @@ spec:
                 - message: Hostnames cannot contain an IP
                   rule: self.all(h, !isIP(h))
                 - message: Hostnames must be valid based on RFC-1123
-                  rule: 'self.all(h, !h.contains(''*'') ? !format.dns1123Subdomain().validate(h).hasValue()
-                    : true )'
+                  rule: 'self.all(h, !h.contains(''*'') ? h.matches(''^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)$'')
+                    : true)'
                 - message: Wildcards on hostnames must be the first label, and the
                     rest of hostname must be valid based on RFC-1123
                   rule: 'self.all(h, h.contains(''*'') ? (h.startsWith(''*.'') &&
-                    !format.dns1123Subdomain().validate(h.substring(2)).hasValue())
-                    : true )'
+                    h.substring(2).matches(''^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)$''))
+                    : true)'
               parentRefs:
                 description: |-
                   ParentRefs references the resources (usually Gateways) that a Route wants
