Make action to create draft of the release.

--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -170,7 +170,7 @@ jobs:
           prerelease: true
           files: |
             release/${{ steps.tag.outputs.tag }}-install.yaml
-          draft: false
+          draft: true
           generate_release_notes: false
 
       - name: Cleanup
