--- a/conformance/tests/listenerset-allowed-namespace-same.yaml
+++ b/conformance/tests/listenerset-allowed-namespace-same.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
-  - name: gateway-listener-1-listener
+  - name: gateway-listener
     port: 80
     protocol: HTTP
-    hostname: "gateway-listener-1.com"
+    hostname: "gateway-listener.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -30,17 +30,10 @@ spec:
     name: gateway-allows-listenerset-in-same-namespace
     namespace: gateway-conformance-infra
   listeners:
-  - name: listener-set-1-listener-1
+  - name: listenerset-in-same-namespace-listener
     port: 80
     protocol: HTTP
-    hostname: "listener-set-1-listener-1.com"
-    allowedRoutes:
-      namespaces:
-        from: All
-  - name: listener-set-1-listener-2
-    port: 80
-    protocol: HTTP
-    hostname: "listener-set-1-listener-2.com"
+    hostname: "listenerset-in-same-namespace-listener.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -64,43 +57,10 @@ spec:
     name: gateway-allows-listenerset-in-same-namespace
     namespace: gateway-conformance-infra
   listeners:
-  - name: listener-set-2-listener-1
+  - name: listenerset-in-different-namespace-listener
     port: 80
     protocol: HTTP
-    hostname: "listener-set-2-listener-1.com"
+    hostname: "listenerset-in-different-namespace-listener"
     allowedRoutes:
       namespaces:
         from: All
-  - name: listener-set-2-listener-2
-    port: 80
-    protocol: HTTP
-    hostname: "listener-set-2-listener-2.com"
-    allowedRoutes:
-      namespaces:
-        from: All
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: attaches-to-all-listeners
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - name: gateway-allows-listenerset-in-same-namespace
-    namespace: gateway-conformance-infra
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-in-same-namespace
-    namespace: gateway-conformance-infra
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-in-different-namespace
-    namespace: gateway-api-example-not-allowed-ns
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /route
-    backendRefs:
-    - name: infra-backend-v1
-      port: 8080
