--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -115,22 +115,9 @@ jobs:
           fi
           END_SHA=$(git rev-parse HEAD)
 
-          # Create the release notes header
-          {
-            printf '## Gateway API %s Release Notes\n\n' "${TAG}"
-            printf 'This is the monthly release for the Gateway API experimental channel for %s %s. This release includes the latest features and fixes from Gateway API'\''s main branch.\n\n' "${MONTH_NAME}" "${YEAR}"
-            printf '## Using this Release\n\n'
-            printf 'To install the CRDs for this release, use install %s-install.yaml:\n\n' "${TAG}"
-            printf '```\n'
-            printf 'kubectl apply --server-side=true -f https://github.com/kubernetes-sigs/gateway-api/releases/download/%s/%s-install.yaml\n' "${TAG}" "${TAG}"
-            printf '```\n\n'
-            printf 'To build using this release in Go, include this release in your go.mod:\n\n'
-            printf '```\n'
-            printf 'require sigs.k8s.io/gateway-api %s\n' "${TAG}"
-            printf '```\n\n'
-            printf 'and run go mod tidy. You'\''ll find that %s gets replaced by a Go pseudoversion; this is expected.\n\n' "${TAG}"
-          printf '## Changes Summary\n\n'
-          } > release-notes.md
+          # Create the release notes header from template
+          export TAG MONTH_NAME YEAR
+          envsubst < .github/workflows/release-notes-header.template.md > release-notes.md
 
           if [ -n "$PREV_TAG" ] && [ "$PREV_TAG" != "$TAG" ]; then
             # Add Full Changelog link
