Comment out release schedule.

--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -1,9 +1,11 @@
 name: Monthly Release
 
 on:
-  schedule:
+  # TODO: Uncomment below code after we have released monthly couple of times.
+  # Until then, we will manually trigger the workflow.
+  # schedule:
     # Run on the first day of every month at 00:00 UTC
-    - cron: "0 0 1 * *"
+    # - cron: "0 0 1 * *"
   workflow_dispatch:
     # Allow manual triggering
     inputs:
