--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -11,18 +11,50 @@ linters:
         settings:
           linters:
             enable:
-              - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
-              - "jsontags" # Ensure every field has a json tag.
-              - "nofloats" # Ensure floats are not used.
-              - "nomaps" # Ensure maps are not used.
+              - "defaultorrequired" # defaultorrequired analyzer checks that fields marked as required do not have default values applied.
+              - "defaults" # defaults is a linter to check that fields with default markers are configured correctly.
+              - "duplicatemarkers" # Ensures there are no exact duplicate markers. for types and fields.
+              - "jsontags" # Ensures every field has a json tag.
+              - "nodurations" # Ensures that fields in the API types do not contain `Duration` type ether from the `time` package or the `k8s.io/apimachinery/pkg/apis/meta/v1` package
+              - "nofloats" # Ensures floats are not used.
+              - "nomaps" # Ensures maps are not used.
+              - "nonullable" # Ensures that types and fields do not have the `nullable` marker
               - "nophase" # Phase fields are discouraged by the Kube API conventions, use conditions instead.
+              - "noreferences" # Ensures that field names use 'Ref'/'Refs' instead of 'Reference'/'References'.
+              - "notimestamp" # Ensures that structs do not contain a TimeStamp field.
               - "optionalorrequired" # Every field should be marked as `+optional` or `+required`.
               - "ssatags" # Ensure proper Server-Side Apply (SSA) tags on array fields.
               - "statussubresource" # All root objects that have a `status` field should have a status subresource.
               - "uniquemarkers" # Ensure that types and fields do not contain more than a single definition of a marker that should only be present once.
             disable:
+              # Enforces that an array of struct has at least one required fields. Disabled because BackendRef and others are already using it
+              # - "arrayofstructs"
+              # Disabled because it is very verbose...
+              # - "commentstart"
+              # Disabled because it changes how conditions are merged and we may need to check impact on existing installations
+              # - "conditions"
+              # Enforces usage of int32 or int64. Disabled because GA APIs are already using it
+              # - "integers"
+              # Disabled because some GA fields do not have a maxlength and this may break
+              # - "maxlength"
+              # Disabled because some GA fields do not have a minlength and this may break.
+              # Must be revisited with VAP
+              # - "minlength"
+              # Ensure no booleans are used - controversial
+              # - "nobools"
+              # Ensure that non pointer structs with no required fields are marked as optional. Breaking change
+              # - "nonpointerstructs"
+              # Ensure that optional fields are pointers - controversial
+              # - "optionalfields"
+              # Ensures that required fields has omitempty tags
+              # - "requiredfields"
+              # Ensures that all first-level children fields within a status struct are marked as optional.
+              # Disabled, breaking change for RouteParentStatus 
+              # - "statusoptional"
               - "*"
-          lintersConfig: {}
+          lintersConfig:
+            defaults:
+              preferredDefaultMarker: "kubebuilder:default"
   exclusions:
     generated: strict
     paths:
