fix redirect for the old security-model link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ plugins:
         'concepts/gamma.md': 'mesh/index.md'
         'concepts/service-facets.md': 'mesh/service-facets.md'
         'concepts/guidelines.md': 'guides/api-design.md'
+        'concepts/security-model.md': 'concepts/security.md'
         'contributing/community.md': 'contributing/index.md'
         'contributing/gamma.md': 'mesh/index.md#contributing'
         'reference/implementers-guide.md': 'guides/implementers.md'
