conformance: follow-up on TLSRoute TLSRoute rejection conformance tests (#4473)
* TLSRoute: Use v1alpha3

* TLSRoute: Wait for namespace to be ready

* TLSRoute: Test for no maching section name

* TLSRoute: Test for not allowed protocol HTTP

* TLSRoute: Test for not allowed kind

* TLSRoute: Test for not allowed protocol HTTPS

* TLSRoute: Fix lint

--- a/conformance/tests/tlsroute-invalid-no-matching-listener.yaml
+++ b/conformance/tests/tlsroute-invalid-no-matching-listener.yaml
@@ -2,7 +2,24 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: gateway-http-only
+  name: gateway-tlsroute-tls-passthrough-only
+  namespace: gateway-conformance-infra
+spec:
+  gatewayClassName: "{GATEWAY_CLASS_NAME}"
+  listeners:
+    - name: tls-passthrough
+      protocol: TLS
+      port: 443
+      allowedRoutes:
+        namespaces:
+          from: Same
+      tls:
+        mode: Passthrough
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: gateway-tlsroute-http-only
   namespace: gateway-conformance-infra
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
@@ -13,45 +30,30 @@ spec:
       allowedRoutes:
         namespaces:
           from: Same
-        kinds:
-          - kind: TLSRoute
----
-apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: TLSRoute
-metadata:
-  name: tlsroute-no-matching-listener
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-    - name: gateway-http-only
-  hostnames:
-    - tls.example.com
-  rules:
-    - backendRefs:
-        - name: tls-backend
-          port: 443
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: gateway-tls-httproute-only
+  name: gateway-tlsroute-tcproute-only
   namespace: gateway-conformance-infra
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
-    - name: http
-      port: 80
-      protocol: HTTP
+    - name: tls-passthrough
+      protocol: TLS
+      port: 443
       allowedRoutes:
         namespaces:
           from: Same
         kinds:
-          - kind: HTTPRoute
+          - kind: TCPRoute
+      tls:
+        mode: Passthrough
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: gateway-https-only
+  name: gateway-tlsroute-https-only
   namespace: gateway-conformance-infra
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
@@ -62,22 +64,35 @@ spec:
       allowedRoutes:
         namespaces:
           from: Same
-        kinds:
-          - kind: TLSRoute
       tls:
         mode: Terminate
         certificateRefs:
           - name: tls-validity-checks-certificate
             namespace: gateway-conformance-infra
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1alpha3
+kind: TLSRoute
+metadata:
+  name: tlsroute-not-allowed-protocol-http
+  namespace: gateway-conformance-infra
+spec:
+  parentRefs:
+    - name: gateway-tlsroute-http-only
+  hostnames:
+    - tls.example.com
+  rules:
+    - backendRefs:
+        - name: tls-backend
+          port: 443
+---
+apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: TLSRoute
 metadata:
   name: tlsroute-not-allowed-kind
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
-    - name: gateway-tls-httproute-only
+    - name: gateway-tlsroute-tcproute-only
   hostnames:
     - tls.example.com
   rules:
@@ -85,14 +100,14 @@ spec:
         - name: tls-backend
           port: 443
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: TLSRoute
 metadata:
-  name: tlsroute-wrong-protocol
+  name: tlsroute-not-allowed-protocol-https
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
-    - name: gateway-https-only
+    - name: gateway-tlsroute-https-only
   hostnames:
     - tls.example.com
   rules:
@@ -100,14 +115,14 @@ spec:
         - name: tls-backend
           port: 443
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: TLSRoute
 metadata:
-  name: tlsroute-wrong-section-name
+  name: tlsroute-no-matching-section-name
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
-    - name: gateway-http-only
+    - name: gateway-tlsroute-tls-passthrough-only
       sectionName: nonexistent-listener
   hostnames:
     - tls.example.com
